<resources>
    <string name="app_name">EpiAlert</string>
    <string name="enter">Masuk</string>
    <string name="attention">Dengan melanjutkan, Anda menyetujui Ketentuan Layanan dan Kebijakan Privasi kami.</string>
    <string name="option">Belum punya akun? Buat akun</string>
    <string name="email_empty">Email tidak boleh kosong!</string>
    <string name="email_invalid">Masukkan email dengan benar!!</string>
    <string name="minimum_char">Kata sandi minimal 6 karakter</string>
    <string name="register">Daftar</string>
    <string name="empty">Nama tidak boleh kosong!</string>
    <string name="too_short">Masukkan nama anda minimal 3 karakter</string>
    <string name="success">Login Berhasil</string>
    <string name="pop_up_success">Lanjutkan untuk masuk dengan %1$s?</string>
    <string name="next">Selanjutnya</string>
    <string name="login_error"><![CDATA[Aktivasi login Gagal, Silahkan coba lagi\nMasukkan Email & Password dengan Benar!]]></string>
    <string name="done">Oke</string>
    <string name="form_message">Harap isi formulir terlebih dahulu!</string>
    <string name="register_success">Pembuatan Akun Berhasil</string>
    <string name="account_created">Akun dengan %1$s sudah berhasil dibuat.\nKembali Login?</string>
    <string name="account_failed">Akun dengan %1$s gagal dibuat, mohon memasukkan data dengan benar!</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="classification_failed">Classification Failed</string>
    <string name="empty_image">Tidak ada foto yang dipilih</string>
    <string name="load_failed">Image Load Failed</string>
    <string name="camera">Kamera</string>
    <string name="logout">Keluar</string>
    <string name="confirmation_logout">Anda yakin ingin keluar dari akun ini?</string>
    <string name="cancel">batal</string>
    <string name="exit_apl">Keluar dari aplikasi</string>
    <string name="input_empty">Field ini tidak boleh kosong</string>
    <string name="input_no_spaces">Field ini tidak boleh menggunakan spasi</string>
    <string name="input_invalid">Email atau Username tidak valid</string>
    <string name="input_name">Masukkan Nama Anda</string>
    <string name="input_email">Masukkan Email Anda</string>
    <string name="input_password">Masukkan Password</string>
    <string name="input_username">Masukkan Username anda</string>
    <string name="input_account">Masukkan Email atau Username Anda</string>
    <string name="error_empty_fields">Semua fields harus diisi!</string>
    <string name="regist">Daftar</string>
    <string name="image_classifier_failed">Gagal melakukan klasifikasi gambar</string>
    <string name="have_account">Sudah punya akun? Masuk Sekarang</string>
    <string name="image_processing_failed">Proses gagal</string>
    <string name="open_chatbot">Chat Bot</string>
    <string name="your_question">Ketik pertanyaan Anda...</string>
    <string name="send">Kirim</string>

</resources>