<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <!-- Progress Indicator -->
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Preview Image -->
    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_image_holder_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1.0" />

    <!-- Camera Button -->
    <Button
        android:id="@+id/btn_Camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/btn_Gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previewImageView"
        app:layout_constraintWidth_percent="0.4" />

    <!-- Gallery Button -->
    <Button
        android:id="@+id/btn_Gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_Camera"
        app:layout_constraintTop_toBottomOf="@id/previewImageView"
        app:layout_constraintWidth_percent="0.4" />

    <!-- Analyze Button (Positioned under Camera and Gallery buttons) -->
    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/analyze"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_Camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="16dp" />

    <!-- Logout Button -->
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/blue"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
